--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,68 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+
+/* media query to allow users with such parameters to nullify unnecessary animations
+ */
+@media(prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
+
+.logo-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 4rem;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
+  transform: skew(5deg, 0deg);
+  padding: 20px;
+}
+
+.blurredContainerBox-svgStyling:nth-child(1) {
+  transition-delay: 200ms;
+}
+
+.blurredContainerBox-svgStyling:nth-child(2) {
+  transition-delay: 400ms;
+}
+
+.blurredContainerBox-svgStyling:nth-child(3) {
+  transition-delay: 600ms;
+}
+
+.blurredContainerBox-svgStyling:nth-child(4) {
+  transition-delay: 800ms;
+}
+
+.blurredContainerBox-svgStyling:nth-child(5) {
+  transition-delay: 1000ms;
+}
+
+.blurredContainerBox-svgStyling:nth-child(6) {
+  transition-delay: 1200ms;
+}
+
+.blurredContainerBox-svgStyling:nth-child(7) {
+  transition-delay: 1400ms;
+}
+
+.blurredContainerBox-svgStyling:nth-child(8) {
+  transition-delay: 1600ms;
+}
