--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 @font-face {
-  font-family: 'Kanit', sans-serif;
-  src: local('Kanit'), url(./fonts/Kanit-Regular.ttf) format('truetype');
+  font-family: 'Kanit';
+  src: url(./fonts/Kanit-Regular.ttf) format('truetype');
+  font-display: swap;
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -48,6 +51,7 @@ code {
   flex-wrap: wrap;
   width: 100%;
   margin-top: 4rem;
+  margin-bottom: 4rem;
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
   transform: skew(5deg, 0deg);
@@ -84,4 +88,16 @@ code {
 
 .blurredContainerBox-svgStyling:nth-child(8) {
   transition-delay: 1600ms;
+}
+
+@media (max-width: 560px) {
+  /* .blurredContainerBox-titlePlacement {
+    max-width: 380px;
+  } */
+  .AppBar-appbarStyle {
+    justify-content: center !important;
+  }
+  /* .TextBox-boxDefaultStyle {
+    max-width: 300px;
+  } */
 }
