--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -58,46 +62,186 @@ code {
   padding: 20px;
 }
 
-.blurredContainerBox-svgStyling:nth-child(1) {
+.blurredContainerBox-svgContainer:nth-child(1) {
   transition-delay: 200ms;
 }
 
-.blurredContainerBox-svgStyling:nth-child(2) {
+.blurredContainerBox-svgContainer:nth-child(2) {
   transition-delay: 400ms;
 }
 
-.blurredContainerBox-svgStyling:nth-child(3) {
+.blurredContainerBox-svgContainer:nth-child(3) {
   transition-delay: 600ms;
 }
 
-.blurredContainerBox-svgStyling:nth-child(4) {
+.blurredContainerBox-svgContainer:nth-child(4) {
   transition-delay: 800ms;
 }
 
-.blurredContainerBox-svgStyling:nth-child(5) {
+.blurredContainerBox-svgContainer:nth-child(5) {
   transition-delay: 1000ms;
 }
 
-.blurredContainerBox-svgStyling:nth-child(6) {
+.blurredContainerBox-svgContainer:nth-child(6) {
   transition-delay: 1200ms;
 }
 
-.blurredContainerBox-svgStyling:nth-child(7) {
+.blurredContainerBox-svgContainer:nth-child(7) {
   transition-delay: 1400ms;
 }
 
-.blurredContainerBox-svgStyling:nth-child(8) {
+.blurredContainerBox-svgContainer:nth-child(8) {
   transition-delay: 1600ms;
 }
 
+.logo-wrapper-css {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain-wordmark.svg');
+  background-size: cover;
+  filter: grayscale(1);
+  z-index: 12;
+}
+
+.logo-wrapper-filter-css {
+  position: absolute;
+  width: 60%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain-wordmark.svg');
+  z-index: 13;
+}
+
+.logo-wrapper-html {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg');
+  background-size: cover;
+  filter: grayscale(1);
+  z-index: 12;
+}
+
+.logo-wrapper-filter-html {
+  position: absolute;
+  width: 75%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain-wordmark.svg');
+  z-index: 13;
+}
+
+.logo-wrapper-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-plain.svg');
+  background-size: cover;
+  filter: grayscale(1);
+  z-index: 12;
+}
+
+.logo-wrapper-filter-js {
+  position: absolute;
+  width: 75%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-plain.svg');
+  z-index: 13;
+}
+
+.logo-wrapper-react {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg');
+  background-size: cover;
+  filter: grayscale(1);
+  z-index: 12;
+}
+
+.logo-wrapper-filter-react {
+  position: absolute;
+  width: 65%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg');
+  z-index: 13;
+}
+
+.logo-wrapper-material {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/materialui/materialui-plain.svg');
+  background-size: cover;
+  filter: grayscale(1);
+  z-index: 12;
+}
+
+.logo-wrapper-filter-material {
+  position: absolute;
+  width: 55%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/materialui/materialui-plain.svg');
+  z-index: 13;
+}
+
+.logo-wrapper-nodejs {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-plain-wordmark.svg');
+  background-size: cover;
+  filter: grayscale(1);
+  z-index: 12;
+}
+
+.logo-wrapper-filter-nodejs {
+  position: absolute;
+  width: 15%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-plain-wordmark.svg');
+  z-index: 13;
+}
+
+.logo-wrapper-mongodb {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain-wordmark.svg');
+  background-size: cover;
+  filter: grayscale(1);
+  z-index: 12;
+}
+
+.logo-wrapper-filter-mongodb {
+  position: absolute;
+  width: 15%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain-wordmark.svg');
+  z-index: 13;
+}
+
 @media (max-width: 560px) {
-  /* .blurredContainerBox-titlePlacement {
-    max-width: 380px;
-  } */
+
   .AppBar-appbarStyle {
     justify-content: center !important;
   }
-  /* .TextBox-boxDefaultStyle {
-    max-width: 300px;
-  } */
+
+  .blurredContainerBox-svgContainer {
+    width: 50px;
+    height: 50px;
+  }
 }
