--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,10 @@ code {
   z-index: 13;
 }
 
+#textboxtitle {
+  font-size: 36px;
+}
+
 @media (max-width: 560px) {
 
   .AppBar-appbarStyle {
@@ -244,5 +248,14 @@ code {
   .blurredContainerBox-svgContainer {
     width: 50px;
     height: 50px;
+  }
+
+  .blurredContainerBox-container {
+    left: calc(50% - 32.5vw) !important;
+    width: 65vw !important;
+  }
+
+  .logo-container {
+    margin-bottom: 3rem;
   }
 }
